# excelerant

excelerant/: .env  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
excelerant-server/: .gitignore  app.py  input.py  inputHandler.py  observer.py  output.py  outputHandler.py  pixtendController.py  requirements.txt  setup.sh
excelerant-server/lib/: README.md  pyproject.toml
excelerant-server/lib/excelerant/: __init__.py  core.py  main.py  observer.py  stub.py
excelerant/src/: App.css  App.tsx
excelerant/src/components/: Chamber.tsx
excelerant/src/contexts/: ExcelerantContext.ts
excelerant/src/hooks/: useExcelerant.ts
excelerant/src/routes/: Chamber.tsx  MainPage.tsx
